SERVER-25990 Remove heap_usage_bytes from serverStatus output